<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvAboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/title_section5"
        android:textColor="@color/blue"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/tvAboutSpacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacer"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/blue" />

    <TableLayout
        android:id="@+id/tl_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-light"
                android:paddingRight="@dimen/lbl_margin"
                android:text="@string/about_version_label"
                android:textColor="@color/blue"
                android:textSize="@dimen/med" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/about_version"
                android:textSize="@dimen/med" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvAuthorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-light"
                android:paddingRight="@dimen/lbl_margin"
                android:text="@string/about_author_label"
                android:textColor="@color/blue"
                android:textSize="@dimen/med" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/about_author"
                android:textSize="@dimen/med" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-light"
                android:paddingRight="@dimen/lbl_margin"
                android:text="@string/about_date_label"
                android:textColor="@color/blue"
                android:textSize="@dimen/med" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/about_date"
                android:textSize="@dimen/med" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvCourseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-light"
                android:paddingRight="@dimen/lbl_margin"
                android:text="@string/about_courseName_label"
                android:textColor="@color/blue"
                android:textSize="@dimen/med" />

            <TextView
                android:id="@+id/tvCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/about_courseName"
                android:textSize="@dimen/med" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvCourseNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-light"
                android:paddingRight="@dimen/lbl_margin"
                android:text="@string/about_courseNumber_label"
                android:textColor="@color/blue"
                android:textSize="@dimen/med" />

            <TextView
                android:id="@+id/tvCourseNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/about_courseNumber"
                android:textSize="@dimen/med" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/lbl_margin"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvLineBreak"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacer"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/blue"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/about_desc"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/tvCurrentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/blue"
            android:textSize="@dimen/small" />

    </LinearLayout>

</LinearLayout>