<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="4" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvRegisterIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="Welcome to LifeQuest."
                android:textColor="@color/blue"
                android:textSize="@dimen/large" />

            <TextView
                android:id="@+id/tvFillForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/intro_form"
                android:textColor="@color/blue"
                android:textSize="@dimen/small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_vertical"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:fontFamily="sans-serif-light"
                    android:gravity="right"
                    android:text="@string/reg_name"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/med" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10"
                    android:fontFamily="sans-serif-thin"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/med" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center_vertical"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/tvYearBorn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:fontFamily="sans-serif-light"
                    android:gravity="right"
                    android:text="@string/reg_yearborn"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/med" />

                <Spinner
                    android:id="@+id/spnYearBorn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/buttons_primary"
                android:fontFamily="sans-serif-light"
                android:text="Start Questing"
                android:textColor="@color/white"
                android:textSize="@dimen/med" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
